# composit

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  build.py  install.sh  install_native_deps.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
codegen/: __init__.py  codegen.py  codegen_test.py
composit/: __init__.py  introspection.py  multidigraph.py  persistent_array.py  types.py
composit/backends/x86/: compile.py
composit/nn/: __init__.py  chain_rule.py  core.py  evaluate.py  functions.py  jacobians.py  layers.py  module.py  vectorized_functions.py
composit/numpy/: __init__.py  core.py  evaluate.py  functions.py
composit/tilelab/: __init__.py  pygame.py  tile.py  tile_view.py  tilelab.py
flashlight/: __init__.py  functional.py  introspection.py  tensor.py  tracer.py
model_zoo/: bert.py  resnet.py
model_zoo/stable_diffusion/: autoencoder_kl.py
mosaic/backends/: ctypes.py
mosaic/backends/x86/: README.md  compile.py  constants.py  kernel_name.py  model.py  types.py
mosaic/inspector/: inspect.py
mosaic/passes/: inspect.py
mosaic/tilelab/: tile.py  tile_view.py  tilization_level.py
networkx_persistent/: multidigraph.py
persistent_numpy/: __init__.py  functions.py  hash.py  instructions.py  multidigraph.py  ndarray.py  nn_functions.py  numpy_functions.py  persistent_array.py  string.py
persistent_numpy/instructions/: __init__.py  compute_data.py  compute_shape.py  types.py
persistent_numpy/nn/: __init__.py  autograd.py  chain_rule.py  core.py  differentiate.py  evaluate.py  functions.py  jacobians.py  module.py  optimizer.py  vectorized_functions.py
persistent_numpy/numpy/: __init__.py  core.py  evaluate.py  functions.py
persistent_numpy/numpy/random/: __init__.py
persistent_numpy/random/: __init__.py
persistent_numpy/tilelab/: __init__.py  pygame.py  tilelab.py
pyimmer/: map.hpp  map_key_iterator.hpp  map_test.py  map_value_iterator.hpp  memory_policy.hpp  module.cpp  py_object_wrapper.hpp  types.hpp
src/codegen/: codegen.py
src/composit/: __init__.py  introspection.py  multidigraph.py  types.py
src/composit/nn/: __init__.py  chain_rule.py  core.py  differentiate.py  evaluate.py  functions.py  jacobians.py  operations.py  optimize.py  optimizer.py
src/composit/numpy/: __init__.py  core.py  evaluate.py  functions.py  operations.py
src/extensions/pyimmer/: map.hpp  map_item_iterator.hpp  map_key_iterator.hpp  map_value_iterator.hpp  py_object_wrapper.hpp  types.hpp
src/flashlight/: __init__.py  introspection.py  tensor.py  tracer.py
src/model_zoo/: bert.py  resnet.py
src/model_zoo/stable_diffusion/: autoencoder_kl.py
src/mosaic/: aligned_array.py  ctypes.py
src/mosaic/passes/: __init__.py  inspect.py
src/mosaic/tilelab/: __init__.py  layout.py  pygame.py  tile.py  tile_view.py
src/pyimmer/: map.hpp  map_item_iterator.hpp  map_value_iterator.hpp
tests/: conftest.py
tests/codegen/: test_codegen.py
tests/composit/: test_graph_caching.py  test_multidigraph.py
tests/composit/integration_tests/: test_bert.py
tests/flashlight/: test_bert.py  test_functional.py  test_resnet.py  test_t5.py  test_tracer.py  test_whisper.py
tests/integration_tests/: test_bert.py
tests/model_zoo/: test_bert.py  test_llama.py  test_resnet.py  test_stable_diffusion.py
tests/networkx_compatibility_tests/: test_graph.py  test_multidigraph.py  test_multigraph.py
tests/unit_tests/: test_bert.py  test_multidigraph.py  test_nn_functions.py  test_numpy_functions.py  test_persistent_numpy.py
tools/: run_linters_and_formatters.sh
(+137 files in other folders)
