[tool.ruff]
line-length = 120
ignore = ["F403"]

[tool.black]
target-version = ['py311']
line-length = 120
include = '(\.pyi?)$'
exclude = 'vendor|venv|wvenv'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poetry]
name = "composit"
version = "1.0.0"
description = "Used to create Baby AGI"
authors = ["typon <hfarooq@protonmail.com>", "arakhmati <akhmed.rakhmati@gmail.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
graphviz = "^0.20.1"
loguru = "^0.7.0"
networkx = "^3.1"
numpy = "^1.24.2"
pandas = "^2.0.0"
pyrsistent = "^0.19.3"
python = "^3.8"
toolz = "^0.12.0"
datasets = "^2.15.0"
librosa = "^0.10.1"


[tool.poetry.group.dev.dependencies]
accelerate = "^0.20.3"
black = "^23.3.0"
diffusers = "^0.16.1"
exceptiongroup = "^1.1.1"
matplotlib = "^3.7.1"
pillow = "^9.5.0"
py-spy = "^0.3.14"
pytest = "^7.3.0"
pytest-benchmark = "^4.0.0"
pytest-profiling = "^1.7.0"
pudb = "^2022.1.3"
ruff = "^0.0.261"
scipy = "==1.9.3"
torch = "==2.0.0"
torchvision = "==0.15.1"
transformers = "^4.27.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
