[tool.ruff]
line-length = 120
ignore = ["F403"]

[tool.black]
target-version = ['py311']
line-length = 120
include = '(\.pyi?)$'
exclude = 'vendor|venv|wvenv'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poetry] 
name = "composit"
version = "1.0.0"
description = "Used to create Baby AGI"
authors = ["typon <hfarooq@protonmail.com>", "arakhmati <akhmed.rakhmati@gmail.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
graphviz = "^0.20.1"
loguru = "^0.7.0"
networkx = "^3.4"
numpy = "2.1.3"
pandas = "^2.0.0"
pyrsistent = "^0.20.0"
python = "^3.11"
toolz = "^0.12.0"
torchtrail = "^0.0.20"


[tool.poetry.group.dev.dependencies]
accelerate = "0.26.0"
black = "^23.3.0"
datasets = "^2.15.0"
diffusers = "^0.32.0"
exceptiongroup = "^1.1.1"
matplotlib = "^3.7.1"
numba = "0.61.0"
librosa = "^0.10.1"
llvmlite = "0.44.0"
pillow = "^9.5.0"
pip = "^24.3.1"
py-spy = "^0.3.14"
pytest = "^7.3.0"
pytest-benchmark = "^4.0.0"
pytest-profiling = "^1.7.0"
pudb = "^2022.1.3"
ruff = "^0.0.261"
scipy = "==1.15.0"
sentencepiece = "^0.1.99"
torch = "==2.5.0"
torchvision = "==0.20.0"
transformers = "4.48.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
